--- a/refs.bib
+++ b/refs.bib
@@ -156,7 +156,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2019JCAP...09..010C,
        author = {{Castorina}, Emanuele and {Hand}, Nick and {Seljak}, Uro{\v{s}} and {Beutler}, Florian and {Chuang}, Chia-Hsun and {Zhao}, Cheng and {Gil-Mar{\'\i}n}, H{\'e}ctor and {Percival}, Will J. and {Ross}, Ashley J. and {Choi}, Peter Doohyun and {Dawson}, Kyle and {de la Macorra}, Axel and {Rossi}, Graziano and {Ruggeri}, Rossana and {Schneider}, Donald and {Zhao}, Gong-Bo},
         title = "{Redshift-weighted constraints on primordial non-Gaussianity from the clustering of the eBOSS DR14 quasars in Fourier space}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2019,
         month = sep,
@@ -196,7 +196,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2022JCAP...11..013B,
        author = {{Barreira}, Alexandre},
         title = "{Can we actually constrain f$_{NL}$ using the scale-dependent bias effect? An illustration of the impact of galaxy bias uncertainties using the BOSS DR12 galaxy power spectrum}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {cosmological parameters from LSS, power spectrum, inflation, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2022,
         month = nov,
@@ -215,7 +215,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2020JCAP...12..013B,
        author = {{Barreira}, Alexandre and {Cabass}, Giovanni and {Schmidt}, Fabian and {Pillepich}, Annalisa and {Nelson}, Dylan},
         title = "{Galaxy bias and primordial non-Gaussianity: insights from galaxy formation simulations with IllustrisTNG}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies},
          year = 2020,
         month = dec,
@@ -234,7 +234,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2020JCAP...12..031B,
        author = {{Barreira}, Alexandre},
         title = "{On the impact of galaxy bias uncertainties on primordial non-Gaussianity constraints}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2020,
         month = dec,
@@ -256,7 +256,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2023JCAP...01..023L,
        author = {{Lazeyras}, Titouan and {Barreira}, Alexandre and {Schmidt}, Fabian and {Desjacques}, Vincent},
         title = "{Assembly bias in the local PNG halo bias and its implication for f $_{NL}$ constraints}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {cosmological parameters from LSS, galaxy clustering, non-gaussianity, cosmological simulations, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2023,
         month = jan,
@@ -352,7 +352,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2010JCAP...07..013R,
        author = {{Reid}, Beth A. and {Verde}, Licia and {Dolag}, Klaus and {Matarrese}, Sabino and {Moscardini}, Lauro},
         title = "{Non-Gaussian halo assembly bias}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {Astrophysics - Cosmology and Extragalactic Astrophysics},
          year = 2010,
         month = jul,
@@ -368,10 +368,53 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{planck13,
+	author = {{Planck Collaboration} and {Ade, P. A. R.} and {Aghanim, N.} and {Armitage-Caplan, C.} and {Arnaud, M.} and {Ashdown, M.} and {Atrio-Barandela, F.} and {Aumont, J.} and {Baccigalupi, C.} and {Banday, A. J.} and {Barreiro, R. B.} and {Bartlett, J. G.} and {Bartolo, N.} and {Battaner, E.} and {Benabed, K.} and {Beno\^{\i}t, A.} and {Benoit-L\'evy, A.} and {Bernard, J.-P.} and {Bersanelli, M.} and {Bielewicz, P.} and {Bobin, J.} and {Bock, J. J.} and {Bonaldi, A.} and {Bonavera, L.} and {Bond, J. R.} and {Borrill, J.} and {Bouchet, F. R.} and {Bridges, M.} and {Bucher, M.} and {Burigana, C.} and {Butler, R. C.} and {Cardoso, J.-F.} and {Catalano, A.} and {Challinor, A.} and {Chamballu, A.} and {Chiang, H. C.} and {Chiang, L.-Y} and {Christensen, P. R.} and {Church, S.} and {Clements, D. L.} and {Colombi, S.} and {Colombo, L. P. L.} and {Couchot, F.} and {Coulais, A.} and {Crill, B. P.} and {Curto, A.} and {Cuttaia, F.} and {Danese, L.} and {Davies, R. D.} and {Davis, R. J.} and {de Bernardis, P.} and {de Rosa, A.} and {de Zotti, G.} and {Delabrouille, J.} and {Delouis, J.-M.} and {D\'esert, F.-X.} and {Diego, J. M.} and {Dole, H.} and {Donzelli, S.} and {Dor\'e, O.} and {Douspis, M.} and {Ducout, A.} and {Dunkley, J.} and {Dupac, X.} and {Efstathiou, G.} and {Elsner, F.} and {En\ss{}lin, T. A.} and {Eriksen, H. K.} and {Fergusson, J.} and {Finelli, F.} and {Forni, O.} and {Frailis, M.} and {Franceschi, E.} and {Galeotta, S.} and {Ganga, K.} and {Giard, M.} and {Giraud-H\'eraud, Y.} and {Gonz\'alez-Nuevo, J.} and {G\'orski, K. M.} and {Gratton, S.} and {Gregorio, A.} and {Gruppuso, A.} and {Hansen, F. K.} and {Hanson, D.} and {Harrison, D.} and {Heavens, A.} and {Henrot-Versill\'e, S.} and {Hern\'andez-Monteagudo, C.} and {Herranz, D.} and {Hildebrandt, S. R.} and {Hivon, E.} and {Hobson, M.} and {Holmes, W. A.} and {Hornstrup, A.} and {Hovest, W.} and {Huffenberger, K. M.} and {Jaffe, A. H.} and {Jaffe, T. R.} and {Jones, W. C.} and {Juvela, M.} and {Keih\"anen, E.} and {Keskitalo, R.} and {Kisner, T. S.} and {Knoche, J.} and {Knox, L.} and {Kunz, M.} and {Kurki-Suonio, H.} and {Lacasa, F.} and {Lagache, G.} and {L\"ahteenm\"aki, A.} and {Lamarre, J.-M.} and {Lasenby, A.} and {Laureijs, R. J.} and {Lawrence, C. R.} and {Leahy, J. P.} and {Leonardi, R.} and {Lesgourgues, J.} and {Lewis, A.} and {Liguori, M.} and {Lilje, P. B.} and {Linden-V\o{}rnle, M.} and {L\'opez-Caniego, M.} and {Lubin, P. M.} and {Mac\'{\i}as-P\'erez, J. F.} and {Maffei, B.} and {Maino, D.} and {Mandolesi, N.} and {Mangilli, A.} and {Marinucci, D.} and {Maris, M.} and {Marshall, D. J.} and {Martin, P. G.} and {Mart\'{\i}nez-Gonz\'alez, E.} and {Masi, S.} and {Massardi, M.} and {Matarrese, S.} and {Matthai, F.} and {Mazzotta, P.} and {Meinhold, P. R.} and {Melchiorri, A.} and {Mendes, L.} and {Mennella, A.} and {Migliaccio, M.} and {Mitra, S.} and {Miville-Desch\^enes, M.-A.} and {Moneti, A.} and {Montier, L.} and {Morgante, G.} and {Mortlock, D.} and {Moss, A.} and {Munshi, D.} and {Murphy, J. A.} and {Naselsky, P.} and {Natoli, P.} and {Netterfield, C. B.} and {N\o{}rgaard-Nielsen, H. U.} and {Noviello, F.} and {Novikov, D.} and {Novikov, I.} and {Osborne, S.} and {Oxborrow, C. A.} and {Paci, F.} and {Pagano, L.} and {Pajot, F.} and {Paoletti, D.} and {Pasian, F.} and {Patanchon, G.} and {Peiris, H. V.} and {Perdereau, O.} and {Perotto, L.} and {Perrotta, F.} and {Piacentini, F.} and {Piat, M.} and {Pierpaoli, E.} and {Pietrobon, D.} and {Plaszczynski, S.} and {Pointecouteau, E.} and {Polenta, G.} and {Ponthieu, N.} and {Popa, L.} and {Poutanen, T.} and {Pratt, G. W.} and {Pr\'ezeau, G.} and {Prunet, S.} and {Puget, J.-L.} and {Rachen, J. P.} and {Racine, B.} and {Rebolo, R.} and {Reinecke, M.} and {Remazeilles, M.} and {Renault, C.} and {Renzi, A.} and {Ricciardi, S.} and {Riller, T.} and {Ristorcelli, I.} and {Rocha, G.} and {Rosset, C.} and {Roudier, G.} and {Rubi\~no-Mart\'{\i}n, J. A.} and {Rusholme, B.} and {Sandri, M.} and {Santos, D.} and {Savini, G.} and {Scott, D.} and {Seiffert, M. D.} and {Shellard, E. P. S.} and {Smith, K.} and {Spencer, L. D.} and {Starck, J.-L.} and {Stolyarov, V.} and {Stompor, R.} and {Sudiwala, R.} and {Sunyaev, R.} and {Sureau, F.} and {Sutter, P.} and {Sutton, D.} and {Suur-Uski, A.-S.} and {Sygnet, J.-F.} and {Tauber, J. A.} and {Tavagnacco, D.} and {Terenzi, L.} and {Toffolatti, L.} and {Tomasi, M.} and {Tristram, M.} and {Tucci, M.} and {Tuovinen, J.} and {Valenziano, L.} and {Valiviita, J.} and {Van Tent, B.} and {Varis, J.} and {Vielva, P.} and {Villa, F.} and {Vittorio, N.} and {Wade, L. A.} and {Wandelt, B. D.} and {White, M.} and {White, S. D. M.} and {Yvon, D.} and {Zacchei, A.} and {Zonca, A.}},
+	title = {Planck 2013 results. XXIV. Constraints on primordial non-Gaussianity},
+	DOI= "10.1051/0004-6361/201321554",
+	url= "https://doi.org/10.1051/0004-6361/201321554",
+	journal = {A\&A},
+	year = 2014,
+	volume = 571,
+	pages = "A24",
+}
+
+@article{Komatsu_2010,
+doi = {10.1088/0264-9381/27/12/124010},
+url = {https://dx.doi.org/10.1088/0264-9381/27/12/124010},
+year = {2010},
+month = {may},
+publisher = {},
+volume = {27},
+number = {12},
+pages = {124010},
+author = {Eiichiro Komatsu},
+title = {Hunting for primordial non-Gaussianity in the cosmic microwave background},
+journal = {Classical and Quantum Gravity},
+abstract = {Since the first limit on the (local) primordial non-Gaussianity parameter, fNL, was obtained from the Cosmic Background Explorer (COBE) data in 2002, observations of the cosmic microwave background (CMB) have been playing a central role in constraining the amplitudes of various forms of non-Gaussianity in primordial fluctuations. The current 68\% limit from the 7-year data of the Wilkinson Microwave Anisotropy Probe (WMAP) is fNL = 32 ± 21, and the Planck satellite is expected to reduce the uncertainty by a factor of 4 in a few years from now. If fNL ≫ 1 is found by Planck with high statistical significance, all single-field models of inflation would be ruled out. Moreover, if the Planck satellite finds fNL ∼ 30, then it would be able to test a broad class of multi-field models using the 4-point function (trispectrum) test of τNL ⩾ (6fNL/5)2. In this paper, we review the methods (optimal estimator), results (WMAP 7-year) and challenges (secondary anisotropy, second-order effect and foreground) of measuring primordial non-Gaussianity from the CMB data, present a science case for the trispectrum and conclude with future prospects.}
+}
+
+@article{Komatsu_2003,
+doi = {10.1086/377220},
+url = {https://dx.doi.org/10.1086/377220},
+year = {2003},
+month = {sep},
+publisher = {},
+volume = {148},
+number = {1},
+pages = {119},
+author = {E. Komatsu and A. Kogut and M. R. Nolta and C. L. Bennett and M. Halpern and G. Hinshaw and N. Jarosik and M. Limon and S. S. Meyer and L. Page and D. N. Spergel and G. S. Tucker and L. Verde and E. Wollack and E. L. Wright},
+title = {First-Year Wilkinson Microwave Anisotropy Probe
+(WMAP)* Observations: Tests of
+Gaussianity},
+journal = {The Astrophysical Journal Supplement Series},
+abstract = {We present limits to the amplitude of non-Gaussian primordial fluctuations in the WMAP 1 yr cosmic microwave background sky maps. A nonlinear coupling parameter, fNL, characterizes the amplitude of a quadratic term in the primordial potential. We use two statistics: one is a cubic statistic which measures phase correlations of temperature fluctuations after combining all configurations of the angular bispectrum. The other uses the Minkowski functionals to measure the morphology of the sky maps. Both methods find the WMAP data consistent with Gaussian primordial fluctuations and establish limits, -58 &lt; fNL &lt; 134, at 95\% confidence. There is no significant frequency or scale dependence of fNL. The WMAP limit is 30 times better than COBE and validates that the power spectrum can fully characterize statistical properties of CMB anisotropy in the WMAP data to a high degree of accuracy. Our results also validate the use of a Gaussian theory for predicting the abundance of clusters in the local universe. We detect a point-source contribution to the bispectrum at 41 GHz, bsrc = (9.5 ± 4.4) × 10-5 μK3 sr2, which gives a power spectrum from point sources of csrc = (15 ± 6) × 10-3 μK2 sr in thermodynamic temperature units. This value agrees well with independent estimates of source number counts and the power spectrum at 41 GHz, indicating that bsrc directly measures residual source contributions.}
+}
+
 @ARTICLE{2017MNRAS.470.2617A,
        author = {{BOSS Collaboration} and {Alam}, Shadab and {Ata}, Metin and {Bailey}, Stephen and {Beutler}, Florian and {Bizyaev}, Dmitry and {Blazek}, Jonathan A. and {Bolton}, Adam S. and {Brownstein}, Joel R. and {Burden}, Angela and {Chuang}, Chia-Hsun and {Comparat}, Johan and {Cuesta}, Antonio J. and {Dawson}, Kyle S. and {Eisenstein}, Daniel J. and {Escoffier}, Stephanie and {Gil-Mar{\'\i}n}, H{\'e}ctor and {Grieb}, Jan Niklas and {Hand}, Nick and {Ho}, Shirley and {Kinemuchi}, Karen and {Kirkby}, David and {Kitaura}, Francisco and {Malanushenko}, Elena and {Malanushenko}, Viktor and {Maraston}, Claudia and {McBride}, Cameron K. and {Nichol}, Robert C. and {Olmstead}, Matthew D. and {Oravetz}, Daniel and {Padmanabhan}, Nikhil and {Palanque-Delabrouille}, Nathalie and {Pan}, Kaike and {Pellejero-Ibanez}, Marcos and {Percival}, Will J. and {Petitjean}, Patrick and {Prada}, Francisco and {Price-Whelan}, Adrian M. and {Reid}, Beth A. and {Rodr{\'\i}guez-Torres}, Sergio A. and {Roe}, Natalie A. and {Ross}, Ashley J. and {Ross}, Nicholas P. and {Rossi}, Graziano and {Rubi{\~n}o-Mart{\'\i}n}, Jose Alberto and {Saito}, Shun and {Salazar-Albornoz}, Salvador and {Samushia}, Lado and {S{\'a}nchez}, Ariel G. and {Satpathy}, Siddharth and {Schlegel}, David J. and {Schneider}, Donald P. and {Sc{\'o}ccola}, Claudia G. and {Seo}, Hee-Jong and {Sheldon}, Erin S. and {Simmons}, Audrey and {Slosar}, An{\v{z}}e and {Strauss}, Michael A. and {Swanson}, Molly E.~C. and {Thomas}, Daniel and {Tinker}, Jeremy L. and {Tojeiro}, Rita and {Maga{\~n}a}, Mariana Vargas and {Vazquez}, Jose Alberto and {Verde}, Licia and {Wake}, David A. and {Wang}, Yuting and {Weinberg}, David H. and {White}, Martin and {Wood-Vasey}, W. Michael and {Y{\`e}che}, Christophe and {Zehavi}, Idit and {Zhai}, Zhongxu and {Zhao}, Gong-Bo},
         title = "{The clustering of galaxies in the completed SDSS-III Baryon Oscillation Spectroscopic Survey: cosmological analysis of the DR12 galaxy sample}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {distance scale, large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2017,
         month = sep,
@@ -389,7 +432,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2013MNRAS.428.1116R,
        author = {{Ross}, Ashley J. and {Percival}, Will J. and {Carnero}, Aurelio and {Zhao}, Gong-bo and {Manera}, Marc and {Raccanelli}, Alvise and {Aubourg}, Eric and {Bizyaev}, Dmitry and {Brewington}, Howard and {Brinkmann}, J. and {Brownstein}, Joel R. and {Cuesta}, Antonio J. and {da Costa}, Luiz A.~N. and {Eisenstein}, Daniel J. and {Ebelke}, Garrett and {Guo}, Hong and {Hamilton}, Jean-Christophe and {Maga{\~n}a}, Mariana Vargas and {Malanushenko}, Elena and {Malanushenko}, Viktor and {Maraston}, Claudia and {Montesano}, Francesco and {Nichol}, Robert C. and {Oravetz}, Daniel and {Pan}, Kaike and {Prada}, Francisco and {S{\'a}nchez}, Ariel G. and {Samushia}, Lado and {Schlegel}, David J. and {Schneider}, Donald P. and {Seo}, Hee-Jong and {Sheldon}, Alaina and {Simmons}, Audrey and {Snedden}, Stephanie and {Swanson}, Molly E.~C. and {Thomas}, Daniel and {Tinker}, Jeremy L. and {Tojeiro}, Rita and {Zehavi}, Idit},
         title = "{The clustering of galaxies in the SDSS-III DR9 Baryon Oscillation Spectroscopic Survey: constraints on primordial non-Gaussianity}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {cosmology: observations, (cosmology:) inflation, (cosmology:) large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2013,
         month = jan,
@@ -404,12 +447,10 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-
-
 @ARTICLE{2019MNRAS.485.4160M,
        author = {{Mueller}, Eva-Maria and {Percival}, Will J. and {Ruggeri}, Rossana},
         title = "{Optimizing primordial non-Gaussianity measurements from galaxy surveys}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {cosmology: observations, inflation, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2019,
         month = may,
@@ -448,7 +489,7 @@ archivePrefix = {arXiv},
 @ARTICLE{chapman2022MNRAS.516..617C,
        author = {{Chapman}, Michael J. and {Mohammad}, Faizan G. and {Zhai}, Zhongxu and {Percival}, Will J. and {Tinker}, Jeremy L. and {Bautista}, Julian E. and {Brownstein}, Joel R. and {Burtin}, Etienne and {Dawson}, Kyle S. and {Gil-Mar{\'\i}n}, H{\'e}ctor and {de la Macorra}, Axel and {Ross}, Ashley J. and {Rossi}, Graziano and {Schneider}, Donald P. and {Zhao}, Gong-Bo},
         title = "{The completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: measurement of the growth rate of structure from the small-scale clustering of the luminous red galaxy sample}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {galaxies: distances and redshifts, cosmological parameters, cosmology: observations, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2022,
         month = oct,
@@ -486,7 +527,7 @@ archivePrefix = {arXiv},
 @ARTICLE{gilmarin2020MNRAS.498.2492G,
        author = {{Gil-Mar{\'\i}n}, H{\'e}ctor and {Bautista}, Juli{\'a}n E. and {Paviot}, Romain and {Vargas-Maga{\~n}a}, Mariana and {de la Torre}, Sylvain and {Fromenteau}, Sebastien and {Alam}, Shadab and {{\'A}vila}, Santiago and {Burtin}, Etienne and {Chuang}, Chia-Hsun and {Dawson}, Kyle S. and {Hou}, Jiamin and {de Mattia}, Arnaud and {Mohammad}, Faizan G. and {M{\"u}ller}, Eva-Maria and {Nadathur}, Seshadri and {Neveux}, Richard and {Percival}, Will J. and {Raichoor}, Anand and {Rezaie}, Mehdi and {Ross}, Ashley J. and {Rossi}, Graziano and {Ruhlmann-Kleider}, Vanina and {Smith}, Alex and {Tamone}, Am{\'e}lie and {Tinker}, Jeremy L. and {Tojeiro}, Rita and {Wang}, Yuting and {Zhao}, Gong-Bo and {Zhao}, Cheng and {Brinkmann}, Jonathan and {Brownstein}, Joel R. and {Choi}, Peter D. and {Escoffier}, Stephanie and {de la Macorra}, Axel and {Moon}, Jeongin and {Newman}, Jeffrey A. and {Schneider}, Donald P. and {Seo}, Hee-Jong and {Vivek}, Mariappan},
         title = "{The Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: measurement of the BAO and growth rate of structure of the luminous red galaxy sample from the anisotropic power spectrum between redshifts 0.6 and 1.0}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {cosmological parameters, large-scale structure of the Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2020,
         month = oct,
@@ -506,7 +547,7 @@ archivePrefix = {arXiv},
 @ARTICLE{bautista2021MNRAS.500..736B,
        author = {{Bautista}, Julian E. and {Paviot}, Romain and {Vargas Maga{\~n}a}, Mariana and {de la Torre}, Sylvain and {Fromenteau}, Sebastien and {Gil-Mar{\'\i}n}, Hector and {Ross}, Ashley J. and {Burtin}, Etienne and {Dawson}, Kyle S. and {Hou}, Jiamin and {Kneib}, Jean-Paul and {de Mattia}, Arnaud and {Percival}, Will J. and {Rossi}, Graziano and {Tojeiro}, Rita and {Zhao}, Cheng and {Zhao}, Gong-Bo and {Alam}, Shadab and {Brownstein}, Joel and {Chapman}, Michael J. and {Choi}, Peter D. and {Chuang}, Chia-Hsun and {Escoffier}, St{\'e}phanie and {de la Macorra}, Axel and {du Mas des Bourboux}, H{\'e}lion and {Mohammad}, Faizan G. and {Moon}, Jeongin and {M{\"u}ller}, Eva-Maria and {Nadathur}, Seshadri and {Newman}, Jeffrey A. and {Schneider}, Donald and {Seo}, Hee-Jong and {Wang}, Yuting},
         title = "{The completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: measurement of the BAO and growth rate of structure of the luminous red galaxy sample from the anisotropic correlation function between redshifts 0.6 and 1}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {cosmology: dark energy, cosmology: large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2021,
         month = jan,
@@ -526,7 +567,7 @@ archivePrefix = {arXiv},
 @ARTICLE{ross2020MNRAS.498.2354R,
        author = {{Ross}, Ashley J. and {Bautista}, Julian and {Tojeiro}, Rita and {Alam}, Shadab and {Bailey}, Stephen and {Burtin}, Etienne and {Comparat}, Johan and {Dawson}, Kyle S. and {de Mattia}, Arnaud and {du Mas des Bourboux}, H{\'e}lion and {Gil-Mar{\'\i}n}, H{\'e}ctor and {Hou}, Jiamin and {Kong}, Hui and {Lyke}, Brad W. and {Mohammad}, Faizan G. and {Moustakas}, John and {Mueller}, Eva-Maria and {Myers}, Adam D. and {Percival}, Will J. and {Raichoor}, Anand and {Rezaie}, Mehdi and {Seo}, Hee-Jong and {Smith}, Alex and {Tinker}, Jeremy L. and {Zarrouk}, Pauline and {Zhao}, Cheng and {Zhao}, Gong-Bo and {Bizyaev}, Dmitry and {Brinkmann}, Jonathan and {Brownstein}, Joel R. and {Rosell}, Aurelio Carnero and {Chabanier}, Sol{\`e}ne and {Choi}, Peter D. and {Chuang}, Chia-Hsun and {Cruz-Gonzalez}, Irene and {de la Macorra}, Axel and {de la Torre}, Sylvain and {Escoffier}, Stephanie and {Fromenteau}, Sebastien and {Higley}, Alexandra and {Jullo}, Eric and {Kneib}, Jean-Paul and {McLane}, Jacob N. and {Mu{\~n}oz-Guti{\'e}rrez}, Andrea and {Neveux}, Richard and {Newman}, Jeffrey A. and {Nitschelm}, Christian and {Palanque-Delabrouille}, Nathalie and {Paviot}, Romain and {Pullen}, Anthony R. and {Rossi}, Graziano and {Ruhlmann-Kleider}, Vanina and {Schneider}, Donald P. and {Maga{\~n}a}, Mariana Vargas and {Vivek}, M. and {Zhang}, Yucheng},
         title = "{The Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey: Large-scale structure catalogues for cosmological analysis}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {catalogues, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2020,
         month = oct,
@@ -546,7 +587,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2021MNRAS.503.5061W,
        author = {{Weaverdyck}, Noah and {Huterer}, Dragan},
         title = "{Mitigating contamination in LSS surveys: a comparison of methods}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {methods: data analysis, methods: statistical, surveys, cosmology: observations, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2021,
         month = may,
@@ -723,10 +764,19 @@ title = {Ohio Supercomputer Center}
 }
 
 @article{mueller2022primordial,
-  title={Primordial non-Gaussianity from the Completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey II: Measurements in Fourier Space with optimal weights},
-  author={Mueller, Eva-Maria and Rezaie, Mehdi and Percival, Will J and Ross, Ashley J and Ruggeri, Rossana and Seo, Hee-Jong and Gil-Mar{\'\i}n, H{\'e}ctor and Bautista, Julian and Brownstein, Joel R and Dawson, Kyle and others},
-  year={2022},
-  journal={Monthly Notices of the Royal Astronomical Society}
+author = {Mueller, Eva-Maria and Rezaie, Mehdi and Percival, Will J and Ross, Ashley J and Ruggeri, Rossana and Seo, Hee-Jong and Gil-Marín, Héctor and Bautista, Julian and Brownstein, Joel R and Dawson, Kyle and de la Macorra, Axel and Palanque-Delabrouille, Nathalie and Rossi, Graziano and Schneider, Donald P and Yéche, Christophe},
+    title = "{Primordial non-Gaussianity from the completed SDSS-IV extended Baryon Oscillation Spectroscopic Survey II: measurements in Fourier space with optimal weights}",
+    journal = {Monthly Notices of the Royal Astronomical Society},
+    volume = {514},
+    number = {3},
+    pages = {3396-3409},
+    year = {2022},
+    month = {04},
+    abstract = "{We present measurements of the local primordial non-Gaussianity parameter \\$f\_\\{\\mathrm\\{NL\\}\\}^\\mathrm\\{local\\} \\$from the clustering of 343 708 quasars with redshifts 0.8 \\&lt; z \\&lt; 2.2 distributed over 4808 deg2 from the final data release (DR16) of the extended Baryon Acoustic Oscillation Spectroscopic Survey (eBOSS), the largest volume spectroscopic survey up to date. Our analysis is performed in Fourier space, using the power spectrum monopole at very large scales to constrain the scale-dependent halo bias. We demonstrate the robustness of our analysis pipeline with EZ-mock catalogues that simulate the eBOSS DR16 target selection. We carefully assess the impact of systematics on our measurement, exploiting a novel neural network scheme for cleaning the DR16 sample as well as test multiple contamination removal methods. We estimate the bias due to the overcorrection of the systematic removal to be sub-dominant compared to the statistical uncertainty. We find fNL = −12 ± 21 (68 per cent confidence) for the main clustering sample including quasars with redshifts between 0.8 and 2.2, after applying redshift weighting techniques, designed for non-Gaussianity measurement from large scales structure, to optimize our analysis, which improve our results by 37 per cent.}",
+    issn = {0035-8711},
+    doi = {10.1093/mnras/stac812},
+    url = {https://doi.org/10.1093/mnras/stac812},
+    eprint = {https://academic.oup.com/mnras/article-pdf/514/3/3396/44234727/stac812.pdf},
 }
 
 
@@ -847,15 +897,20 @@ archivePrefix = {arXiv},
 }
 
 @article{baldauf2011galaxy,
-  title={Galaxy bias and non-linear structure formation in general relativity},
-  author={Baldauf, Tobias and Seljak, Uro{\v{s}} and Senatore, Leonardo and Zaldarriaga, Matias},
-  journal={Journal of Cosmology and Astroparticle Physics},
-  volume={2011},
-  number={10},
-  pages={031},
-  year={2011},
-  publisher={IOP Publishing}
+doi = {10.1088/1475-7516/2011/10/031},
+url = {https://dx.doi.org/10.1088/1475-7516/2011/10/031},
+year = {2011},
+month = {oct},
+publisher = {},
+volume = {2011},
+number = {10},
+pages = {031},
+author = {Tobias Baldauf and  Uroš Seljak and  Leonardo Senatore and  Matias Zaldarriaga},
+title = {Galaxy bias and non-linear structure formation in general relativity},
+journal = {Journal of Cosmology and Astroparticle Physics},
+abstract = {Length scales probed by the large scale structure surveys are becoming closer and closer to the horizon scale. Further, it has been recently understood that non-Gaussianity in the initial conditions could show up in a scale dependence of the bias of galaxies at the largest possible distances. It is therefore important to take General Relativistic effects into account. Here we provide a General Relativistic generalization of the bias that is valid both for Gaussian and for non-Gaussian initial conditions. The collapse of objects happens on very small scales, while long-wavelength modes are always in the quasi linear regime. Around every small collapsing region, it is therefore possible to find a reference frame  that is valid for arbitrary times and where the space time is almost flat: the Fermi frame. Here  the Newtonian approximation is applicable and the equations of motion are the ones of the standard N-body codes. The effects of long-wavelength modes are encoded in the mapping from the cosmological frame to the local Fermi frame. At the level of the linear bias, the effect of the long-wavelength modes on the dynamics of the short scales is all encoded in the local curvature of the Universe, which allows us to define a General Relativistic generalization of the bias in the standard Newtonian setting. We show that the bias due to this effect goes to zero as the square of the ratio between the physical wavenumber and the Hubble scale for modes longer than the horizon, confirming the intuitive picture that modes longer than the horizon do not have any dynamical effect. On the other hand, the bias due to non-Gaussianities does not need to vanish for modes longer than the Hubble scale, and for non-Gaussianities of the local kind it goes to a constant. As a further application of our setup, we show that it is not necessary to perform large N-body simulations to extract information about long-wavelength modes: N-body simulations can be done on small scales and long-wavelength modes are encoded simply by adding curvature to the simulation, as well as rescaling the time and the scale.}
 }
+
 
 @article{baldauf2011primordial,
   title={Primordial non-Gaussianity in the bispectrum of the halo density field},
@@ -960,6 +1015,67 @@ archivePrefix = {arXiv},
 }
 
 
+@ARTICLE{2014JCAP...08..039F,
+       author = {{Flauger}, Raphael and {Hill}, J. Colin and {Spergel}, David N.},
+        title = "{Toward an understanding of foreground emission in the BICEP2 region}",
+      journal = {Journal of Cosmology and Astroparticle Physics},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2014,
+        month = aug,
+       volume = {2014},
+       number = {8},
+        pages = {039-039},
+          doi = {10.1088/1475-7516/2014/08/039},
+archivePrefix = {arXiv},
+       eprint = {1405.7351},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014JCAP...08..039F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{2014JCAP...10..035M,
+       author = {{Mortonson}, Michael J. and {Seljak}, Uro{\v{s}}},
+        title = "{A joint analysis of Planck and BICEP2 B modes including dust polarization uncertainty}",
+      journal = {Journal of Cosmology and Astroparticle Physics},
+     keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2014,
+        month = oct,
+       volume = {2014},
+       number = {10},
+        pages = {035-035},
+          doi = {10.1088/1475-7516/2014/10/035},
+archivePrefix = {arXiv},
+       eprint = {1405.5857},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014JCAP...10..035M},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
+
+
+@ARTICLE{2014PhRvL.112x1101B,
+       author = {{BICEP2 Collaboration} and {Ade}, P.~A.~R. and {Aikin}, R.~W. and {Barkats}, D. and {Benton}, S.~J. and {Bischoff}, C.~A. and {Bock}, J.~J. and {Brevik}, J.~A. and {Buder}, I. and {Bullock}, E. and {Dowell}, C.~D. and {Duband}, L. and {Filippini}, J.~P. and {Fliescher}, S. and {Golwala}, S.~R. and {Halpern}, M. and {Hasselfield}, M. and {Hildebrandt}, S.~R. and {Hilton}, G.~C. and {Hristov}, V.~V. and {Irwin}, K.~D. and {Karkare}, K.~S. and {Kaufman}, J.~P. and {Keating}, B.~G. and {Kernasovskiy}, S.~A. and {Kovac}, J.~M. and {Kuo}, C.~L. and {Leitch}, E.~M. and {Lueker}, M. and {Mason}, P. and {Netterfield}, C.~B. and {Nguyen}, H.~T. and {O'Brient}, R. and {Ogburn}, R.~W. and {Orlando}, A. and {Pryke}, C. and {Reintsema}, C.~D. and {Richter}, S. and {Schwarz}, R. and {Sheehy}, C.~D. and {Staniszewski}, Z.~K. and {Sudiwala}, R.~V. and {Teply}, G.~P. and {Tolan}, J.~E. and {Turner}, A.~D. and {Vieregg}, A.~G. and {Wong}, C.~L. and {Yoon}, K.~W.},
+        title = "{Detection of B-Mode Polarization at Degree Angular Scales by BICEP2}",
+      journal = {\prl},
+     keywords = {98.70.Vc, 04.80.Nn, 95.85.Bh, 98.80.Es, Background radiations, Gravitational wave detectors and experiments, Radio microwave, Observational cosmology, Astrophysics - Cosmology and Nongalactic Astrophysics, General Relativity and Quantum Cosmology, High Energy Physics - Phenomenology, High Energy Physics - Theory},
+         year = 2014,
+        month = jun,
+       volume = {112},
+       number = {24},
+          eid = {241101},
+        pages = {241101},
+          doi = {10.1103/PhysRevLett.112.241101},
+archivePrefix = {arXiv},
+       eprint = {1403.3985},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2014PhRvL.112x1101B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 
 @article{huterer2013calibration,
   title={Calibration errors unleashed: effects on cosmological parameters and requirements for large-scale structure surveys},
@@ -1016,7 +1132,7 @@ archivePrefix = {arXiv},
 @ARTICLE{wang2020,
        author = {{Wang}, Mike (Shengbo) and {Beutler}, Florian and {Bacon}, David},
         title = "{Impact of relativistic effects on the primordial non-Gaussianity signature in the large-scale clustering of quasars}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {cosmological parameters, large-scale structure of Universe, cosmology: observations, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2020,
         month = dec,
@@ -1034,7 +1150,7 @@ archivePrefix = {arXiv},
 @ARTICLE{castorina2020JCAP,
        author = {{Castorina}, Emanuele and {Moradinezhad Dizgah}, Azadeh},
         title = "{Local Primordial Non-Gaussianities and super-sample variance}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2020,
         month = oct,
@@ -1054,7 +1170,7 @@ archivePrefix = {arXiv},
 @ARTICLE{Padmanabhan2007,
        author = {{Padmanabhan}, Nikhil and {Schlegel}, David J. and {Seljak}, Uro{\v{s}} and {Makarov}, Alexey and {Bahcall}, Neta A. and {Blanton}, Michael R. and {Brinkmann}, Jonathan and {Eisenstein}, Daniel J. and {Finkbeiner}, Douglas P. and {Gunn}, James E. and {Hogg}, David W. and {Ivezi{\'c}}, {\v{Z}}eljko and {Knapp}, Gillian R. and {Loveday}, Jon and {Lupton}, Robert H. and {Nichol}, Robert C. and {Schneider}, Donald P. and {Strauss}, Michael A. and {Tegmark}, Max and {York}, Donald G.},
         title = "{The clustering of luminous red galaxies in the Sloan Digital Sky Survey imaging data}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {cosmological parameters, cosmology: observations, distance scale, large-scale structure of Universe, Astrophysics},
          year = 2007,
         month = jul,
@@ -1092,7 +1208,7 @@ archivePrefix = {arXiv},
 @ARTICLE{sabti2021JCAP,
        author = {{Sabti}, Nashwan and {Mu{\~n}oz}, Julian B. and {Blas}, Diego},
         title = "{First constraints on small-scale non-Gaussianity from UV galaxy luminosity functions}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Astrophysics of Galaxies, High Energy Physics - Phenomenology},
          year = 2021,
         month = jan,
@@ -1242,7 +1358,7 @@ archivePrefix = {arXiv},
 	doi = {10.1088/1475-7516/2015/05/040},
 	eid = {040},
 	eprint = {1311.2597},
-	journal = {\jcap},
+	journal = {Journal of Cosmology and Astroparticle Physics},
 	keywords = {Astrophysics - Cosmology and Nongalactic Astrophysics},
 	month = may,
 	number = {5},
@@ -1389,7 +1505,7 @@ archivePrefix = {arXiv},
 @ARTICLE{2021JCAP...11..027B,
        author = {{Bahr-Kalus}, Benedict and {Bertacca}, Daniele and {Verde}, Licia and {Heavens}, Alan},
         title = "{The Kaiser-Rocket effect: three decades and counting}",
-      journal = {\jcap},
+      journal = {Journal of Cosmology and Astroparticle Physics},
      keywords = {cosmological parameters from LSS, power spectrum, inflation, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2021,
         month = nov,
@@ -1408,7 +1524,7 @@ archivePrefix = {arXiv},
 @ARTICLE{Wang2019,
        author = {{Wang}, Mike Shengbo and {Percival}, Will J. and {Avila}, Santiago and {Crittenden}, Robert and {Bianchi}, Davide},
         title = "{Cosmological inference from galaxy-clustering power spectrum: Gaussianization and covariance decomposition}",
-      journal = {\mnras},
+      journal = {Monthly Notices of the Royal Astronomical Society},
      keywords = {methods: data analysis, methods: statistical, large-scale structure of Universe, Astrophysics - Cosmology and Nongalactic Astrophysics},
          year = 2019,
         month = jun,
