--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -7,23 +7,20 @@ In its simplest form, local primordial non-Gaussianity (PNG) is parameterized by
 \begin{equation}
  \Phi = \phi + \fnl [\phi^{2} - <\phi^{2}>],
 \end{equation}
-where $\Phi$ is the primordial curvature perturbation and $\phi$ is assumed to be a Gaussian random field. Obtaining reliable, accurate, and robust constraints on $\fnl$ is crucial in advancing our understanding of the dynamics of the early Universe. For instance, the standard single-field slow-roll inflationary model predicts a small value of $\fnl \sim 0.01$ \citep[see, e.g.,][]{2003JHEP...05..013M}. On the other hand, some alternative inflationary scenarios involve multiple scalar fields that can interact with each other during inflation, leading to the generation of larger levels of non-Gaussianities. These models predict considerably larger values of $\fnl$ that can reach up to $100$ or higher \citep[see, e.g.,][]{Byrnes_2008, 2011PhRvD..84b3520P}. With $\sigma (\fnl)\sim 1$, we can rule out or confirm specific models of inflation and gain insight into the physics that drove the inflationary expansion \citep[see, e.g.,][]{alvarez2014arXiv1412.4671A, de2017next}.
+where $\Phi$ is the primordial curvature perturbation and $\phi$ is assumed to be a Gaussian random field. Local-type PNG generates a primordial bispectrum, which peaks in the squeezed triangle configuration where one of the three wave vectors is much smaller than the other two. This means that one of the modes is on a much larger scale than the other two, and this mode couples with the other two modes to generate a non-Gaussian signal, which then affects the local number density of galaxies. The coupling between the short and long wavelengths induces a distinct bias in the galaxy distribution, which leads to a $k^{-2}$-dependent feature in the two-point clustering of galaxies and quasars \citep{dalal2008imprints}. Obtaining reliable, accurate, and robust constraints on $\fnl$ is crucial in advancing our understanding of the dynamics of the early Universe. For instance, the standard single-field slow-roll inflationary model predicts a small value of $\fnl \sim 0.01$ \citep[see, e.g.,][]{2003JHEP...05..013M}. On the other hand, some alternative inflationary scenarios involve multiple scalar fields that can interact with each other during inflation, leading to the generation of larger levels of non-Gaussianities. These models predict considerably larger values of $\fnl$ that can reach up to $100$ or higher \citep[see, e.g.,][]{Byrnes_2008, 2011PhRvD..84b3520P}. With $\sigma (\fnl)\sim 1$, we can rule out or confirm specific models of inflation and gain insight into the physics that drove the inflationary expansion \citep[see, e.g.,][]{alvarez2014arXiv1412.4671A, de2017next}.
 
-Local-type PNG generates a primordial bispectrum, which peaks in the squeezed triangle configuration where one of the three wave vectors is much smaller than the other two. This means that one of the modes is on a much larger scale than the other two, and this mode couples with the other two modes to generate a non-Gaussian signal, which then affects the local number density of galaxies. The coupling between the short and long wavelengths induces a distinct bias in the galaxy distribution, which leads to a $k^{-2}$-dependent feature in the two-point clustering of galaxies and quasars \citep{dalal2008imprints}.
-
-\mc{Ashley: I would make the paragraph about current LSS constraints longer, adding details about forecasts for future and/or merge with the paragraph about CMB results. Basically, what should come out of the text is that, at least in terms of Fisher forecasts (and ignoring the assembly bias issue) LSS offers the most promise. I would add the pieces about DESI that you have later in the introduction here.} The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement of CMB anisotropies, $\fnl=0.9\pm 5.1$ \citep{akrami2019planck}. Limited by cosmic variance, CMB data cannot enhance the statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{2016arXiv161002743A, ade2019simons}. On the other hand, LSS surveys probe a 3D map of the Universe, and thus provide more modes to limit $\fnl$. However, nonlinearities raised from structure formation pose a serious challenge for measuring $\fnl$ with the three-point clustering of galaxies, and these nonlinear effects are non-trivial to model and disentangle from the primordial signal \citep{baldauf2011galaxy, baldauf2011primordial}.
+\mc{Ashley: I would make the paragraph about current LSS constraints longer, adding details about forecasts for future and/or merge with the paragraph about CMB results. Basically, what should come out of the text is that, at least in terms of Fisher forecasts (and ignoring the assembly bias issue) LSS offers the most promise. I would add the pieces about DESI that you have later in the introduction here.}
+The current tightest bound on $\fnl$ comes from Planck's bispectrum measurement of CMB anisotropies, $\fnl=0.9\pm 5.1$ \citep{akrami2019planck}. Limited by cosmic variance, CMB data cannot enhance the statistical precision of $\fnl$ measurements enough to break the degeneracy amongst various inflationary paradigms \citep[see, e.g.,][]{2016arXiv161002743A, ade2019simons}. On the other hand, LSS surveys probe a 3D map of the Universe, and thus provide more modes to limit $\fnl$. However, nonlinearities raised from structure formation pose a serious challenge for measuring $\fnl$ with the three-point clustering of galaxies, and these nonlinear effects are non-trivial to model and disentangle from the primordial signal \citep{baldauf2011galaxy, baldauf2011primordial}.
 
 Currently, the most precise constraints on $\fnl$ from LSS reach a level of $\sigma(\fnl) \sim 20-30$, with the majority of the constraining power coming from the two-point clustering statistics that utilize the scale-dependent bias effect \citep{2019JCAP...09..010C, mueller2022primordial, 2022PhRvD.106d3506C, 2022arXiv220111518D}. Surveying large areas of the sky can unlock more modes and help improve these constraints. As an ongoing wide-area galaxy survey, the Dark Energy Spectroscopic Instrument (DESI) uses $5000$ robotically-driven fibers to simultaneously collect spectra of extra-galactic objects. DESI is designed to deliver an unparalleled volume of spectroscopic data covering $\sim 14,000$ square degrees that promises to deepen our understanding of the energy contents of the Universe, neutrino masses, and the nature of gravity \citep{aghamousa2016desi}. Moreover, DESI alone is expected to improve our constraints on local PNG down to $\sigma(\fnl)=5$, assuming systematic uncertainties are under control \citep{aghamousa2016desi}. With multi-tracer techniques, cosmic variance can be further reduced to allow surpassing CMB-like constraints \citep{2015ApJ...814..145A}. For instance, the distortion of CMB photons around foreground masses, which is referred to as CMB lensing, provides an additional probe of LSS, but from a different vantage point. We can significantly reduce statistical uncertainties below $\sigma(\fnl)\sim 1$ by cross-correlating LSS data with CMB-lensing, or other tracers of matter, such as 21 cm intensity mapping  \citep[see, e.g.,][]{schmittfull2018PhRvD, Heinrich2022AAS...24020203H, 2023arXiv230102406J, 2023arXiv230308901S}.  
  
 
-\mc{Ashley: I think the only modeling issues that really ends up being relevant are the assembly bias and integral constraint. I would mention the assembly bias issue and probably expand on that a little and specifically say that we won't actually marginalize over it in this analysis. I don't know that the integral constraint issue needs to be discussed in the introduction, since the modeling needed to address it is fairly clear. (It should definitely be described in the modeling section.) I think the other modeling issues I wouldn't get into, especially in the introduction. Perhaps in the modeling section you can just list them all as being sub-dominant issues for our analysis that we do not worry about. Ashley: I would explain more conceptually why the observational systematics are more problematic on large scales and thus for fNL measurements. You can even cite BICEP results for general issue of low ell angular power spectra measurements being subject to contamination (essentially, we expect our background contamination to generically have large angular scale power).} 
-
+\mc{Ashley: I think the only modeling issues that really ends up being relevant are the assembly bias and integral constraint. I would mention the assembly bias issue and probably expand on that a little and specifically say that we won't actually marginalize over it in this analysis. I don't know that the integral constraint issue needs to be discussed in the introduction, since the modeling needed to address it is fairly clear. (It should definitely be described in the modeling section.) I think the other modeling issues I wouldn't get into, especially in the introduction. Perhaps in the modeling section you can just list them all as being sub-dominant issues for our analysis that we do not worry about.}
 However, further work is needed to fully harness the potential of the scale-dependent bias effect in constraining $\fnl$ with LSS. The amplitude of the $\fnl$ signal in the galaxy distribution is proportional to a bias parameter $b_{\phi}$. Assuming the universality relation, $b_{\phi} \sim (b - p)$, where $b$ is the linear halo bias and $p=1$ is a parameter that describes the response of galaxy formation to primordial potential perturbations in the presence of local PNG \citep[see, e.g.,][]{slosar2008constraints}. The theoretical uncertainties on $p$ is not very well constrained for other tracers of matter \citep{2020JCAP...12..013B, 2020JCAP...12..031B}, and \cite{2022JCAP...11..013B} showed that marginalizing over $p$ even with wide priors leads to biased $\fnl$ constraints because of parameter space projection effects. More simulation-based studies are necessary to investigate the halo-assembly bias and the relationship between $b_{\phi}$ and $b$ for various galaxy samples. For instance, \cite{2023JCAP...01..023L} used N-body simulations to investigate secondary halo properties, such as concentration, spin and sphericity of haloes, and found that halo spin and sphericity preserve the universality of the halo occupation function while halo concentration significantly alters the halo function.  Without better-informed priors on $p$, it is argued that the scale-dependent bias effect can only  be used to constrain the $b_{\phi}\fnl$ term \citep[see, e.g.,][]{2020JCAP...12..031B}. Nevertheless, the detection significance of local PNG remains unaffected by various assumptions regarding $p$. This means that a nonzero detection of $b_{\phi}\fnl$ at a certain confidence level will still indicate a nonzero detection of $\fnl$ at that same confidence level. In this work, we assume the universality relation and do not marginalize over $p$.  
 
-In addition to the theoretical uncertainties, measuring $\fnl$ using the scale-dependent bias effect is nonetheless incredibly challenging due to various imaging systematic effects that can modulate the galaxy power spectrum on large scales. For instance, Galactic extinction, astronomical seeing, stellar contamination, and photometric calibration can induce spurious fluctuations with large-scale characteristics in the observed density field of targets, and thus give rise to an excess clustering power on large scales \citep{ross2011, huterer2013calibration}, which can be miss-interpreted as the signature of non-zero local PNG \citep[see, e.g.,][]{PhysRevLett.106.241301}. The issue of imaging systematic effects has proven to be a major challenge in the past efforts to constrain $\fnl$ using the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{2013MNRAS.428.1116R,pullen2013systematic, Ho2015JCAP...05..040H}. It is anticipated that imaging systematic errors will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria to accommodate fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}.  
+\mc{Ashley: I would explain more conceptually why the observational systematics are more problematic on large scales and thus for fNL measurements. You can even cite BICEP results for general issue of low ell angular power spectra measurements being subject to contamination (essentially, we expect our background contamination to generically have large angular scale power).} 
+In addition to the theoretical uncertainties, measuring $\fnl$ through the scale-dependent bias effect is a difficult task due to various imaging systematic effects that can modulate the galaxy power spectrum on large scales. The imaging systematic effects often induce wide-angle variations in the density field, and in general, any large-scale variations can translate into an excess signal in the power spectrum \citep[see, e.g.,][]{huterer2013calibration}, that can be misinterpreted as the signature of non-zero local PNG \citep[see, e.g.,][]{PhysRevLett.106.241301}. Such spurious variations can be caused by Galactic foregrounds, such as dust extinction and stellar density, or varying imaging conditions, such as astrophysical seeing and survey depth \citep[see, e.g.,][]{ross2011}. As an example for a false detection, the BICEP2 experiment initially claimed more than $5\sigma$ evidence for primordial gravitational waves through the detection of B-mode polarization in CMB \citep{2014PhRvL.112x1101B}, but it was later found that the signal was likely caused by dust, rather than by primordial gravitational waves \citep{2014JCAP...08..039F,2014JCAP...10..035M}. The imaging systematic issues have made it challenging to accurately measure $\fnl$, as demonstrated in previous efforts to constrain it using the large-scale clustering of galaxies and quasars \citep[see, e.g.,][]{2013MNRAS.428.1116R,pullen2013systematic, Ho2015JCAP...05..040H}, and it is anticipated that they will be particularly problematic for wide-area galaxy surveys that observe regions of the night sky closer to the Galactic plane and that seek to incorporate more lenient selection criteria to accommodate fainter galaxies \citep[see, e.g,][]{kitanidis2020imaging}.
 
-
-
-The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of luminous red galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic errors, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a delicate signal, we employ linear multivariate regression and neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
+The primary objective of this paper is to utilize the scale-dependent bias signature in the angular power spectrum of galaxies selected from DESI imaging data to constrain the value of $\fnl$. With an emphasis on a careful treatment of imaging systematic effects, we aim to lay the groundwork for subsequent studies of local PNG with DESI spectroscopy. To prepare our sample for measuring such a delicate signal, we employ linear multivariate regression and artificial neural networks to mitigate spurious density fluctuations and ameliorate the excess clustering power caused by imaging systematics. We thoroughly investigate potential sources of systematic error, including survey depth, astronomical seeing, photometric calibration, Galactic extinction, and local stellar density. Our methods and results are validated against simulations, with and without imaging systematics.
 
 This paper is structured as follows. Section \ref{sec:data} describes the galaxy sample from DESI imaging and lognormal simulations with, or without, PNG and synthetic systematic effects. Section \ref{sec:method} outlines the theoretical framework for modelling the angular power spectrum, strategies for handling various observational and theoretical systematic effects, and statistical techniques for measuring the significance of remaining systematics in our sample after mitigation. Our results are presented in Section \ref{sec:results}, and Section \ref{sec:conclusion} summarizes our conclusions and directions for future work.
