--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,5 +1,6 @@
 \section{Results}\label{sec:results}
-\mc{Ashley: explain how the data is combined. Ashley: I think text on blinding could be more like "Our fiducial choice of the 3 map method and robustness tests on (list whatever would make sense at this point) were applied to the data to obtain fNL constraints with no mitigation bias correction and first without revealing the fNL values of the posterior likelihoods (only their relative shifts). After we chose the 3 map method as our fiducial method, we applied further robustness tests and derived the mitigation bias correction."} This section presents our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
+%\mc{Ashley: explain how the data is combined. Ashley: I think text on blinding could be more like "Our fiducial choice of the 3 map method and robustness tests on (list whatever would make sense at this point) were applied to the data to obtain fNL constraints with no mitigation bias correction and first without revealing the fNL values of the posterior likelihoods (only their relative shifts). After we chose the 3 map method as our fiducial method, we applied further robustness tests and derived the mitigation bias correction."}
+This section presents our $\fnl$ constraints obtained from the power spectrum of the DESI LRG targets. The treatment of the imaging systematic effects is performed on each imaging region (BASS+MzLS, DECaLS North/South) separately. After cleaning, the regions are combined for the measurement of the power spectrum. We unblind the galaxy power spectrum and the $\fnl$ values after our cleaning methods are validated and vetted by the cross power spectrum and mean galaxy density diagnostics. We also conduct additional tests to check the robustness of our constraints against various assumptions, such as analyzing each region separately, applying cuts on imaging conditions, and changing the smallest mode used in fitting for $\fnl$.
 
 
 \begin{figure*}
@@ -52,15 +53,17 @@ DESI                      & Nonlinear Nine Maps& $ 49.69$& $ 41.91$& $ 13.10<\fn
 
 
 \subsubsection{Uncalibrated constraints: robustness tests}
-\mc{Alex: I may have missed this—but do you ever quote the marginalized fnl constraints without mitigation bias (corresponding to Fig. 12)? I think they should probably be in a table and commented on in the text.} Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal and return biased $\fnl$ constraints. As expected, non-linear nine maps yields a smaller maximum likelihood estimate of $\fnl$. The best-fitting estimates shift to lower $\fnl$ values as more aggressive methods are applied. Our non-linear three maps returns a best-fitting estimate of $\fnl=26$ with the $68\%(95\%)$ confidence of $19(9)<\fnl <41(53)$ and $\chi^{2}=34.6$. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of $\fnl=17$ with the error of $7(-2)<\fnl<27(38)$. The non-linear nine maps gives an asymetric posterior with the marginalized mean $\fnl=-9$, best estimate $\fnl=-6$ with the error of $-21(-34)<\fnl<2.4(12)$.
+%\mc{Alex: I may have missed this—but do you ever quote the marginalized fnl constraints without mitigation bias (corresponding to Fig. 12)? I think they should probably be in a table and commented on in the text.} 
+Figure \ref{fig:mcmcdr9noshift} shows the probability distributions of $\fnl$ for various treatments before accounting for the over-correction effect. The method with the largest flexibility and more number of imaging systematic maps is more likely to regress out the clustering signal and return biased $\fnl$ constraints. As expected, non-linear nine maps yields a smaller maximum likelihood estimate of $\fnl$. The best-fitting estimates shift to lower $\fnl$ values as more aggressive methods are applied. Our non-linear three maps returns a best-fitting estimate of $\fnl=26$ with the $68\%(95\%)$ confidence of $19(9)<\fnl <41(53)$ and $\chi^{2}=34.6$. With the stellar density map included, non-linear four maps yields a smaller best-fitting estimates of $\fnl=17$ with the error of $7(-2)<\fnl<27(38)$. The non-linear nine maps gives an asymetric posterior with the marginalized mean $\fnl=-9$, best estimate $\fnl=-6$ with the error of $-21(-34)<\fnl<2.4(12)$.
 
-Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied to the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant, as we are only interested in the relative shift in the $\fnl$ constraints after changing the assumptions. Therefore, the absolute scaling of the $\fnl$ constraints presented here are biased because of the over correction effect. Table \ref{tab:dr9method} summarizes the uncalibrated $\fnl$ constraints from the DESI LRG targets. Our tests are as follows:\mc{Edmond: Analyse DES region separately}
+Now we proceed to perform some robustness tests and assess how sensitive the $\fnl$ constraints are to the assumptions made in the analysis or the quality cuts applied to the data. For each case, we re-train the cleaning methods and derive new sets of imaging weights. Accordingly, for the cases where a new survey mask is applied to the data, we re-calculate the covariance matrices using the new survey mask to account for the changes in the survey window and integral constraint effects. Calibrating the mitigation biases for all of these experiments is beyond the scope of this work and redundant, as we are only interested in the relative shift in the $\fnl$ constraints after changing the assumptions. Therefore, the absolute scaling of the $\fnl$ constraints presented here are biased because of the over correction effect. Table \ref{tab:dr9method} summarizes the uncalibrated $\fnl$ constraints from the DESI LRG targets. Our tests are as follows:%\mc{Edmond: Analyse DES region separately}
 
 \begin{itemize}[itemindent=*]
 
 \item \textbf{Linear methods}: Even though the linear three maps approach shows significant remaining systematics (Figure \ref{fig:chi2test}), but we obtain identical constraints from \textit{linear eight maps} and \textit{linear three maps}, respectively, $26(16)<\fnl<49(62)$ and $26(16)<\fnl<50(63)$ at $68\%(95\%)$ confidence. 
 
-\item \textbf{Imaging regions}: \mc{Edmond: maybe comment why the bias is lower in Decals-north? Have you a physical explanation?} We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear three maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. \mr{The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$.} Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. Ignoring the over-correction effect, we find that the results from the DECaLS North region to be the only one that finds PNG nonzero at greater than 95\%, which motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North.
+\item \textbf{Imaging regions}: We compare how our constraints from fitting the power spectrum of the whole DESI footprint compares to that from the power spectrum of each imaging region individually, namely BASS+MzLS, DECaLS North, and DECaLS South. Figure~\ref{fig:mcmc_dr9reg} shows the $68\%$ and $95\%$ probability contours on $\fnl$ and $b$ from each individual region, compared with that from DESI. The cleaning method here is \textit{non-linear three maps}, and the covariance matrices are estimated from the $\fnl=0$ mocks. The bias in DECaLS North is lower than the ones from DECaLS South and BASS+MzLS, which might indicate some remaining systematic effects that could not be mitigated with the available imaging systematic maps. This is because given the negative correlation between $b$ and $\fnl$, a larger value of $\fnl$ due to excess clustering power needs to be compensated by a smaller value of $b$. Overall, we find that the constraints from analyzing each imaging survey separately are consistent with each other and DESI within $68\%$ confidence. Ignoring the over-correction effect, we find that the results from the DECaLS North region to be the only one that finds PNG nonzero at greater than 95\%, which motivates follow-up studies with the spectroscopic sample of LRGs in DECaLS North. %\mc{Edmond: maybe comment why the bias is lower in Decals-north? Have you a physical explanation?}
+
 
 \item \textbf{Stellar density template (\textit{nStar})}: When not accounting for mitigation bias, adding the stellar density map appears to result in significant changes in the $\fnl$ constraints, e.g., compare non-linear three maps with non-linear four maps in Table \ref{tab:dr9method}. But these changes disappear when we account for the mitigation bias and we find all methods recover the same maximum likelihood estimate for $\fnl \sim 50$ within $69\%$ confidence, see Table \ref{tab:dr9methodcalib}, which implies that these changes can be associated with the over-correction issue from the chance correlations between the stellar density map and large-scale structure.
 
@@ -74,7 +77,7 @@ Now we proceed to perform some robustness tests and assess how sensitive the $\f
 
 \item \textbf{Declination mask (\textit{no DEC cut})}: The fiducial mask removes the disconnected islands in DECaLS North and regions with DEC $<-30$ in DECaLS South, where there is a high likelihood of calibration issues as different standard stars are used for photometric calibrations. We analyze our sample without these cuts, and find that the best-fitting and marginalized $\fnl$ mean estimates from DECaLS South shift significantly to higher values of $\fnl$ by $\Delta \fnl \sim 10$, which supports the issue of photometric systematics in the DECaLS South region below DEC $=-30$. On the other hand, the constraints from DECaLS North do not change significantly, indicating the islands do not induce significant contaminations.
 
-\item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: \mc{Edmond: Fig10 / 13: do you have an explanation why there is this remaining bump at l=10-12 ?? is a correction artefact ? you should mention it in the text and comment the effect since it increase the value of fnl when you chose higher $l_min$.} We raise the value of the lowest harmonic mode $\ell_{\rm min}$ used for the likelihood evaluation during MCMC. This is equivalent to decreasing the highest scale of measurement in the power spectrum. By doing so, we anticipate a reduction in the impact of imaging systematics on $\fnl$ inference as lower $\ell$ modes are more likely to be contaminated. Figure \ref{fig:mcmc_dr9elmin} illustrates the power spectra before and after the correction with \textit{non-linear three maps} in the top panel. The bottom panel shows the marginalized mean and $68\%$ error on $\fnl$ with \textit{non-linear three maps} for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. We discover that a slight upward shift in the mean estimates of $\fnl$ on scales ranging from $12$ to $18$ for DECaLS North and BASS+MzLS when we utilized a higher $\ell_{\rm min}$. This outcome might imply that the imaging systematic maps do not contain enough information to help the cleaning method null out the contaminating signal in the NGC. Overall, this result is contrary to what one might predict if a significant systematic-induced spike existed at the very low $\ell$. As a result, it suggests that the underlying issue is more subtle than originally anticipated. 
+\item \textbf{Scale dependence (\textit{varying $\ell_{\rm min}$})}: We raise the value of the lowest harmonic mode $\ell_{\rm min}$ used for the likelihood evaluation during MCMC. This is equivalent to decreasing the highest scale of measurement in the power spectrum. By doing so, we anticipate a reduction in the impact of imaging systematics on $\fnl$ inference as lower $\ell$ modes are more likely to be contaminated. Figure \ref{fig:mcmc_dr9elmin} illustrates the power spectra before and after the correction with \textit{non-linear three maps} in the top panel. The bottom panel shows the marginalized mean and $68\%$ error on $\fnl$ with \textit{non-linear three maps} for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. We discover that a slight upward shift in the mean estimates of $\fnl$ on scales ranging from $12$ to $18$ for DECaLS North and BASS+MzLS when we utilized a higher $\ell_{\rm min}$. This outcome might imply that the imaging systematic maps do not contain enough information to help the cleaning method null out the contaminating signal in the NGC. Overall, this result is contrary to what one might predict if a significant systematic-induced spike existed at the very low $\ell$. As a result, it suggests that the underlying issue is more subtle than originally anticipated. %\mc{Edmond: Fig10 / 13: do you have an explanation why there is this remaining bump at l=10-12 ?? is a correction artefact ? you should mention it in the text and comment the effect since it increase the value of fnl when you chose higher $l_min$.}
 \end{itemize}
 
 \begin{table*}
@@ -136,17 +139,17 @@ DECaLS South (comp. cut)  & Nonlinear Three Maps& $ 29.62$& $ 31.76$& $ 13.00<\f
     \centering
     \includegraphics[width=0.85\textwidth]{figures/cldr9_lowell.pdf}
     \includegraphics[width=0.86\textwidth]{figures/fnl_elmin.pdf}  
-    \caption{\mr{Top: The measured power spectrum of the DESI LRG targets before (solid curves) and after \textit{non-linear three maps} (scatter points) for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. Bottom: The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode used for fitting $\fnl$. The points represent marginalized mean estimates of $\fnl$ and error bars represent $68$\% confidence estimated from the $\fnl=0$ mocks. The scaling of $\fnl$ is not calibrated to account for over correction caused by mitigation.}}\label{fig:mcmc_dr9elmin}
+    \caption{Top: The measured power spectrum of the DESI LRG targets before (solid curves) and after \textit{non-linear three maps} (scatter points) for the DESI, BASS+MzLS, DECaLS North, and DECaLS South regions. Bottom: The uncalibrated $\fnl$ constraints vs the lowest $\ell$ mode used for fitting $\fnl$. The points represent marginalized mean estimates of $\fnl$ and error bars represent $68$\% confidence estimated from the $\fnl=0$ mocks. The scaling of $\fnl$ is not calibrated to account for over correction caused by mitigation.}\label{fig:mcmc_dr9elmin}
 \end{figure*}
 
 
 
+\subsection{Comparison}
 
-\subsection{Summary}
-In summary, we find that the non-linear methods outperform the linear methods in removing the excess clustering signal on large scales. Adding the stellar density map results in significant changes, however when accounted for the mitigation bias, all methods recover the same maximum likelihood estimate. With calibration on the lognormal mocks, the neural network three maps and four maps approaches show $\fnl$ detection at more than $2\sigma$ confidence. The most flexible neural network method with nine maps returns a greater associated uncertainty which is consistent with $\fnl=0$. 
 
-We also run various tests with cuts on the DR9 sample or changing the configuration or details of the analysis. Overall, we find consistent results across sub imaging surveys within DESI. However, our results show that a declination cut at DEC $=-30$ is necessary for DECaLS South to avoid potential calibration issues. Our analysis does not show a statistical demand for including external templates for HI and CALIBZ, using a different covariance matrix, or imposing additional cuts on the DR9 sample based on imaging and pixel completeness. We also obtain robust results regardless of the largest scale used for constraining $\fnl$.
-
-\mr{Ashley: I think we need some kind of discussion section for the results. We should also compare the results to those from other galaxy/QSO samples and Planck. If we don't have enough for a whole section, the Conclusions could just become Discussion and Conclusion. I would start the section something like: "We have measured the PNG parameter fNL using the angular clustering of an LRG sample selected from DESI imaging data. In our fiducial analysis, we have found nonzero PNG at XX\% confidence, with a maximum likelihood value of fNL=XX. We have applied a series of robustness tests on the impact of how we estimate the selection function of our LRG sample, including: the methods (), the set of maps used (), and data quality cuts on the accepted regions. We find no change in the analysis that shifts the maximum likelihood value of fNL to a significantly lower value. The only manner in which the significance of nonzero PNG decreases is due to the uncertainty on the measurement increasing when we employ more maps to the selection function estimation and by doing so remove large-scale clustering information (the effect of which on fNL recovery we have calibrated with mocks).}
-
-\mr{We compare our fiducial results to recent CMB and QSO measurements. Assess agreement. If we are in reasonable agreement with QSO measurement, what is combined constraint Either we have measured an fNL signal that is inconsistent with CMB measurements or there is a hidden source of systematic contamination in our data. Discuss generic effect of calibration. Ask Rongpu if we can include the Gaia calibration test map, which shows patterns that look related to the Gaia scanning strategy, rather that Legacy Survey? (If not, we can just say something like "internal DESI tests of the photometric calibration are unable to uncover DESI-specific issues, e.g., when comparing to Gaia data") Then, something like "The most significant trends that we find are with the E(B-V) map. The source of such a trend would be a mis-calibration of the E(B-V) map itself or the coefficients applied to obtain Galactic extinction corrected photometry. Such issues are generically likely to be proportional in amplitude to the estimated E(B-V), but may not strictly follow the estimated E(B-V). In order to explain the fNL signal we measure, such an effect would need to be approximately twice that of the trend we find with E(B-V). There are ongoing efforts within DESI to obtain improved Galactic extinction information, which will help discover if this is indeed the cause. (Anything to say about Mudur et al. map? I think we need to write something. Perhaps for now just something like "a first look at the Mudur et al E(B-V) maps did not suggest including them would change our results" and then during CWR you could add Mudur-SFD as a map to test against?)"}
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/fnl_history.pdf}
+    \caption{History of constraints on local PNG $\fnl$ at $95\%$ confidence from single-tracer LSS \citep{slosar2008constraints,2013MNRAS.428.1116R, mueller2022primordial}, including our analysis with $25<\fnl<76$ (DESI photo LRG) and CMB surveys \citep{Komatsu_2003, Komatsu_2010, planck13, akrami2019planck}. The median $\fnl$ value is used in case the maximum likelihood estimate was not reported in the reference.}
+    \label{fig:my_label}
+\end{figure}
